2009-10-XX Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.9.0 (libshogun 5.0, libshogunui 3.0)
	* This release contains several cleanups and enhancements:
	* Features:
	    - Implement set_linear_classifier for static interfaces.
		- Implement Polynomial DotFeatures.
		- Implement domain adaptation SVM
		- Speed up MCSVM.
		- Saving and Loading of shogun objects.
		- Examples have been polished/split up into separate files.
	* Bugfixes:
		- Fix one class MKL for static interfaces.
		- Fix performance measures integer overflow.
		- Configure fixes to run under OSX's snow leopard.
		- Compiles and runs under solaris both using suncc and gcc.
	* Cleanup and API Changes:
		- It is no longer necessary to call init_kernel TRAIN/TEST.
		- Removed kernel {load,save}_init.
		- Removed preproc {load,save}_init.
		- Move the mkl code from classifier/svm to classifier/mkl.
		- Removed obsolete mindy support.
		- CClassifier::classify() no longer has a label as argument.
		- Introduce CClassifier::train(CFeatures* ) and classify(CFeatures*)
          for more effective training/testing.
		- Remove unnecessary global symbols.

2009-08-16 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 0.8.0 (libshogun 4.0, libshogunui 2.0)
	* This release contains several cleanups, features and bugfixes:
	* Features:
		- Implements new multiclass svm formulation.
		- 1,2 and general q-norm MKL for classification, regression and
		one-class for wrapper and chunking algorithm for arbitrary (dual) SVM
		solvers.
		- Dynamic Programming code is now accessible from python.
		- Implements Regulatory Modules kernel.
		- Documentation updates (Tutorial, improved installation instructions,
				overview about the implemented algorithms).
	* Bugfixes:
		- Correct q-norm MKL for Newton.
		- Upon make install of elwms don't install files into R/octave/python
		if these interfaces were not configured
		- Svm-nu parameter was not set correctly.