@@ -28,7 +28,8 @@ The following table depicts the status of each interface available in shogun:
 |                  | using the in octave,r,matlab available variables, etc)    |
 +------------------+-----------------------------------------------------------+
 |python-modular    | mature (no known problems)                                |
-|octave-modular    | mature (no known problems)                                |
+|octave-modular    | beta (although all of the features work stably, octave    |
+|                  | will crash when exiting (a known bug in octave)           |
 |r-modular         | pre-alpha quality (swig does not properly handle reference|
 |                  | counting and thus only for the brave:                     |
 |                  | --disable-reference-counting to get it to work, but beware|
